--- a/SampleCraft/SampleCraft.vcxproj
+++ b/SampleCraft/SampleCraft.vcxproj
@@ -184,6 +184,8 @@
     <None Include="shaders\block\normal\normal.vert" />
     <None Include="shaders\shadow\simple_depth.frag" />
     <None Include="shaders\shadow\simple_depth.vert" />
+    <None Include="shaders\shadow_debug\shadow_debug.frag" />
+    <None Include="shaders\shadow_debug\shadow_debug.vert" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="..\..\..\texture\VanillaDefault+1.20.1\assets\minecraft\textures\block\glass.png" />
